--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,8 @@ nb-configuration.xml
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+##########################
+## Vagrant
+##########################
+.vagrant
